2001-11-05  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (FOREIGN, GNU, GNITS, AC_CANONICAL_HOST,
	AC_CANONICAL_SYSTEM, MOSTLY_CLEAN, DIST_CLEAN): Define as constants.
	Adjust usage everywhere.

2001-11-05  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (libtool_files, libtool_sometimes, common_files,
	common_sometimes, config_aux_path): Use qw to simplify definition.
	(scan_texinfo_file) <clean_suffixes, predefined_index,
	hidden_index>: Likewise.
	(scan_autoconf_traces) <traced>: Likewise.
	(scan_one_autoconf_file, check_gnu_standards, resolve_linker):
	Likewise.

2001-11-05  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (handle_single_transform_list): Pass $nonansi_obj to
	derive_suffix.  Don't use an hardcoded 'o' for object extensions.
	(derive_suffix): Accept $OBJ as a second argument, don't
	hardcode 'o'.
	* tests/suffix5.test: New test.
	* tests/Makefile.am (TESTS): Add suffix5.test.
	Reported by Arkadiusz Miskiewicz <misiek@pld.ORG.PL>.

2001-11-05  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (handle_single_transform_list): Don't call
	$lang->target_hook for undefinied langages.
	* tests/suffix4.test: New test.
	* tests/Makefile.am (TESTS): Add suffix4.test.
	Reported by Dmitry Mikhin <dmitrym@acres.com.au>.

2001-11-05  Akim Demaille  <akim@epita.fr>

	* automake.in (@common_sometimes, &handle_configure): No longer
	use stamp-hin.
	* lib/am/remake-hdr.am: Adjust.
	* tests/confh.test: There is no stamp.hin.

2001-11-01  Akim Demaille  <akim@epita.fr>

	* lib/am/lex.am, lib/am/yacc.am: Use the output file name in
	`#line' and multiple inclusion guards.
	* lib/ylwrap: Remove debugging code.
	(input_dir, input_rx): Move where used.
	Use the output file name in `#line'.

2001-10-31  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (transform): Update documentation.

2001-10-31  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* m4/gcj.m4 (AM_PROG_GCJ): Define GCJFLAGS if unset.