@@ -71,20 +71,8 @@ endif %?INSTALL%
 ## Cleaning.  ##
 ## ---------- ##
 
-## FIXME: There is nothing to clean here since files are
-##        byte-compiled when (and where) they are installed.
-##        Some points thought:
-##          1) clean-python ought to be named clean-%DIR%PYTHON, to allow
-##             multiple _PYTHON targets.
-##          2) PYCFILES and PYOFILES are documented but not used anywhere
-##             else.
-##          3) PYCFILES and PYOFILES shoud be target-dependent for the same
-##             reason.
-##
-##.PHONY clean-am: clean-python
-##clean-python:
-##	-test -z "$(PYCFILES)$(PYOFILES)" || rm -f $(PYCFILES) $(PYOFILES)
-
+## There is nothing to clean here since files are
+## byte-compiled when (and where) they are installed.
 
 ## -------------- ##
 ## Distributing.  ##
