@@ -1,4 +1,4 @@
-@set UPDATED 21 October 2001
-@set UPDATED-MONTH October 2001
+@set UPDATED 5 November 2001
+@set UPDATED-MONTH November 2001
 @set EDITION 1.5a
 @set VERSION 1.5a
