@@ -1,5 +1,11 @@
 2001-11-05  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
+	* lib/am/python.am: Cleanup the cleaning section.
+	* automake.texi (Python): Remove documentation for PYCFILES
+	and PYOFILES.  Update the first paragraphes.
+
+2001-11-05  Alexandre Duret-Lutz  <duret_g@epita.fr>
+
 	* automake.in (FOREIGN, GNU, GNITS, AC_CANONICAL_HOST,
 	AC_CANONICAL_SYSTEM, MOSTLY_CLEAN, DIST_CLEAN): Define as constants.
 	Adjust usage everywhere.
